--- a/VRChat/79/933679.html
+++ b/VRChat/79/933679.html
@@ -104,7 +104,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "PIKacQAX6/rQwiR+zbjSJjQZHgEpyFzvQWMjm7ywN8s="></script>
+    "qy0t+RBKvMDm63kpyPzjQrM6t9LSnsRZpElHRV71580="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"狐面","description":"VRchat等での利用を目的とした狐面の3Dモデルとなります。\n\n【ポリゴン数】\n･392\n\n【使用Shader】\nユニティちゃんトゥーンシェーダー Ver.2.0.7\nhttps://unity-chan.com/download/releaseNote.php?id=UTS2_0\n\n【ファイル内容】\n･unitypackage\n･テクスチャ改変用PSD\n\n【利用にあたって】\n〇VRchatへのアップロード\n〇アバターペデスタルへの利用\n〇モデルを改変しての利用\n〇商用利用(データそのものを販売しない場合のみ)\n〇動画制作での使用\n\n×購入者以外の方がデータを取得出来る状態での利用\n×同梱されているデータそのものの販売\n×再配布(改変の有無問わず禁止)\n\n-更新履歴-\n2018.7/16 販売開始\n2020.2/10 ShaderをUTS2に変更\n\n-------------------------------------------------\n不具合などあればご一報ください。\n【Twitter】https://twitter.com/Sdnsk","url":"https://booth.pm/ja/items/933679","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/43027730-b2d6-42a7-99e8-a3d369411f2e/i/933679/f487e69a-6427-4532-9dfd-36eb9dfd2488_base_resized.jpg"}
     </script>
@@ -115,7 +115,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="PIKacQAX6/rQwiR+zbjSJjQZHgEpyFzvQWMjm7ywN8s="></script>
+    nonce="qy0t+RBKvMDm63kpyPzjQrM6t9LSnsRZpElHRV71580="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -189,7 +189,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      349
+                                      348
                                     </div>
                                   </div></a><a class=
                                   "remove-from-wish-list no-underline !text-current"
@@ -205,7 +205,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      349
+                                      348
                                     </div>
                                   </div></a>
                                 </div>
@@ -435,9 +435,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
