--- a/VRChat/27/932127.html
+++ b/VRChat/27/932127.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "WiUNQf5XmGDNrC9699rsiDZjmxEVQRgSsbw8P6TF/m8="></script>
+    "8Imvn7Zu/B36eyM0PkKMVhQ660pghWReb/CSozxYK0s="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ガスマスクソルジャー","description":"2022/1/5 二回目のリメイク版を作ったので公開しました。\n2019 5/6リメイク版配布開始しました。既に購入されてる方は無料でDLできます。\n2018 7/16 モデルの修正と同梱物の追加をしました！\n\nVRchat等での使用を想定して作成した、ローポリでミリタリーな感じのモデルです。\n三形態✕7色バリエーションと小物を5点とロゴマークを同梱しています。\n\n\n内容物\n・ガスマスクソルジャー(素)\n・ガスマスクソルジャー(フードつき)\n・ガスマスクソルジャー(ヘルメットつき)\n・ガスマスク用テクスチャー7色\n・バックパック\n・ポーチ\n　　(上記2点のテクスチャーは本体と共用です)\n・拳銃\n・ショットガン\n・ライフル\n・ガスマスク Force透過png\n\n-----------------------------------------\n利用規約\n\n当規約は随時更新させていただきますので、最新の規約の確認をお願いします。\n\n許可事項\n・VRchatでの使用\n・Unity、MMDでの使用\n・ゲーム、動画、静止画での使用\n・アバターペデスタルを介しての再配布\n・R-18、R-18Gでの使用\n・当モデルの改変\n・商用利用\n\n禁止事項\n・政治的、差別的、誹謗中のための利用\n・ゲーム、映像作品、アバターペデスタルを通さない二次配布\n\n不明な点や不具合報告などございましたら、Twitter(@IspVitamin)までご連絡お願いします。\n\n初版作成_2018月7/14","url":"https://booth.pm/ja/items/932127","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1500"},"image":"https://booth.pximg.net/c/620x620/529ab7c8-ac9e-418b-9cf8-c509712970e1/i/932127/b8817b24-f06e-40a3-99bd-3aadbe35b7d8_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="WiUNQf5XmGDNrC9699rsiDZjmxEVQRgSsbw8P6TF/m8="></script>
+    nonce="8Imvn7Zu/B36eyM0PkKMVhQ660pghWReb/CSozxYK0s="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -518,9 +518,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
