--- a/VRChat/77/930477.html
+++ b/VRChat/77/930477.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "nrFDvs+zd5Rk7CqO7SjkFQqvgw2A1ZlG/aH1JgCCvg0="></script>
+    "vvTkPmAwkeKTJmToNONGj98tJ0IYxUAF3eumbQqh4Tk="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VR アバター】オリジナル3Dモデル「Eulalia_v2」","description":"■■注意■■\nこちらのモデル更新予定ありませんので、現行VRChatへの適用はご自分で作業される必要があります。また将来的にも更新の予定ございません。\n\n\n▼このモデル\nオリジナルデザインの３Dモデル「エウラリア」です。\n\n\nVRChatアバターとして、ぜひ使ってみてくださいね。\nカラバリPSDを使って、自分だけのカラーリングで楽しんでみてください。\n※フルトラは未検証です。\n\n▼Humanoid対応です。\nVRアバター用途で検証済みですが、もちろん他の用途にもご使用いただけます。\n\n▼内容\nUnitypackage\nfbx\nカラーバリエーション作成用PSD\n利用規約\n簡易のアップロードフロー\n\n\n▼必須前提\nUnity(2017.4.15f1)\nUTS(ユニティちゃんトゥーンシェーダー2.0.5)\nVRChatSDK\n\n詳しくはReadmeに目を通してください。\n\n■フェイタルなバグなどございましたら\ntwitter「@fuhak」か、同アカウント記載のメールアドレスまで。ただし一般的な導入法は、種々のガイドサイトなどをご覧になり、ご自分で確認されてください。こちらからの案内はございません。\n\n\n修正ログ\n2018/08/12:アニーメーション、動作時のルック、フェイシャルのバグ改善\n2018/12/24:新衣装にアップグレード\n\n---------------------\n利用規約\n\n概要\n・非営利・営利目的の使用可\n・アプリケーションに本データを組み込む場合用意に抽出できないよう適切に処置すること\n・データ改変可、ただし変更後のデータに関しても作者（KMBL）が著作権を有する\n・本データ使用によって生じた損害に対して一切作者は責任を負いません\n・規約は以降も予告なく変更することがある\n・使用時点をもって本規約に同意したものとして扱う\n\n禁止\n・反社会的目的のための使用\n・データ自体を取引・譲渡を目的としてアップロード、送信、手渡しなど行うこと\n・VRChatにアップロードする際にパブリックを選択化アップロードを禁止\n※「使用」を目的としたVRChatなどのアップロード(Private)は可能\n※ただしアバターペデスタルなどは譲渡に相当するため禁止\n\n\n","url":"https://booth.pm/ja/items/930477","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1800"},"image":"https://booth.pximg.net/c/620x620/a8b07444-eb5a-47bb-a437-216b673361fc/i/930477/fccff1e6-ac36-4d2e-8e8b-f3125fd1806a_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="nrFDvs+zd5Rk7CqO7SjkFQqvgw2A1ZlG/aH1JgCCvg0="></script>
+    nonce="vvTkPmAwkeKTJmToNONGj98tJ0IYxUAF3eumbQqh4Tk="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -475,9 +475,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
