--- a/VRChat/03/928103.html
+++ b/VRChat/03/928103.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "M38Cy8W0yCrb61Nd7qVe+xs4lDNlX6YOmIf+Ny/jT3A="></script>
+    "bPeNoF7eXXmmU3OORqU8LRKFJ7/YIbubuuR3Oj9UHmw="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"瞳用テクスチャ素材","description":"モデリングを始めたはいいが、瞳がむずかしくていい感じにできない！とお困りのあなたへ……\n\n瞳にお使いいただける、シンプルな8色のテクスチャ素材となります。\nテクスチャを適用させるための手順書も入りました。\n\n\n画像は作成者のアバターによるテスト例です。\n\n\n～内容物～\n・テクスチャファイル（png形式）\n・適用手順書（画像説明ありのPDF形式）\n・瞳適用例（blendファイル）\n\n\n\n★利用規約はこちらをご覧ください。（ページ下部から該当シートを選んでください）\nhttps://docs.google.com/spreadsheets/d/1DCh-S5Rafb_NYJTQHtXame5xNWiDTWg5RKkcSiIdyXA/edit?usp=sharing\n","url":"https://booth.pm/ja/items/928103","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/42ee0553-4a9c-4ab5-8673-ebcc9fd6f0be/i/928103/95dc7936-4217-4764-b9c4-ae65808dceca_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="M38Cy8W0yCrb61Nd7qVe+xs4lDNlX6YOmIf+Ny/jT3A="></script>
+    nonce="bPeNoF7eXXmmU3OORqU8LRKFJ7/YIbubuuR3Oj9UHmw="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -424,9 +424,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
