--- a/VRChat/64/928064.html
+++ b/VRChat/64/928064.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "w9txw39WsPo4hdun0DEc1XvrerY28bHvlS+XoYmszlI="></script>
+    "WeppRg6tX42ANJ7bGDTVH8MTi9cSvoyAfjUeZjA9T3g="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRchat用アバター「レイ」","description":"VRchat用アバターです。\n上着のオレンジ色の部分は明滅したりとかします。\n\n\n導入方法：\nVRCSDK及びCubeds-Unity-Shadersを導入したunityプロジェクトにunitypackageファイルを読み込んで下さい。\nその後、modelフォルダ内部にある「modelA04」をシーンにドラッグ＆ドロップして下さい。\n(サムネイル4枚目参照)\n\nリップシンク設定及びカメラ位置は設定済みとなっています。\n(正常にVRCSDKが導入済みのプロジェクトに導入した場合)\n\n\n\nVRCSDKの導入方法など\nhttp://vrchatjp.playing.wiki/d/%a5%a2%a5%d0%a5%bf%a1%bc%a4%ce%ba%ee%c0%ae\n\nCubeds-Unity-Shadersの導入方法\nhttp://vrchatjp.playing.wiki/d/Cubeds-Unity-Shaders\n\n\nVRChat用に調整してありますが、\n・モデルの改変\n・ゲームや動画等vrchat外での利用\nは可能です。\n\n・再配布及び再販売\n・特定個人や団体への中傷等を目的とした利用\nは禁じます。\n\n不明点はTwitterの@mabo_to_fuまで。","url":"https://booth.pm/ja/items/928064","offers":{"priceCurrency":"JPY","@type":"Offer","price":"800"},"image":"https://booth.pximg.net/c/620x620/dd09d57d-ff0e-4d48-b34c-08c891168638/i/928064/48a39abf-9184-42c7-a4c9-ba39b33cb8a2_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="w9txw39WsPo4hdun0DEc1XvrerY28bHvlS+XoYmszlI="></script>
+    nonce="WeppRg6tX42ANJ7bGDTVH8MTi9cSvoyAfjUeZjA9T3g="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -443,9 +443,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
