--- a/VRChat/34/927734.html
+++ b/VRChat/34/927734.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "JgM5PBr2ZYcL+uhhyoWIDBUdRkbWxh+y1nKbkugkPH8="></script>
+    "vHfzPRyq4u7vmmU6jnxtNBnOqX8YlHl7dlOrCf6GjYk="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"クラムシェル型スマートフォン 3DCGモデル","description":"QWERTYキーボード搭載クラムシェル型スマートフォンの3DCGモデルです。\n\nキャラクターに持たせるもよし、そのままVRChatなどでアバターとして使うもよし。もちろん動画やゲーム制作での利用も可能、様々な用途にお使い頂けます。","url":"https://booth.pm/ja/items/927734","offers":{"priceCurrency":"JPY","@type":"Offer","price":"400"},"image":"https://booth.pximg.net/c/620x620/39edc5c4-fd37-4865-94df-88cfbc8cbd88/i/927734/aff2507f-144f-46b4-a843-cb7d37a8970b_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="JgM5PBr2ZYcL+uhhyoWIDBUdRkbWxh+y1nKbkugkPH8="></script>
+    nonce="vHfzPRyq4u7vmmU6jnxtNBnOqX8YlHl7dlOrCf6GjYk="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -472,9 +472,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
